# gameplan

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  cypress.config.js  install-pnpm.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml.disabled  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_fix.py  user_manual.md
.github/helper/: install.sh  install_dependencies.sh  site_config.json
.github/workflows/: make-release-pr.yml  ui-test.yml
cypress/e2e/: comment.cy.js  discussion.cy.js  project.cy.js  task.cy.js  team.cy.js
docker/: docker-compose.yml  init.sh
frontend/: .prettierrc.json  README.md  components.d.ts  cypress.config.js  cypress.config.ts  frappeui.json  index.html  intellisense.d.ts  jsconfig.json  lucideIcons.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite-helpers.ts  vite.config.js  vite.config.ts
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: comment.cy.js  discussion.cy.js  new-discussion.cy.ts  onboarding.cy.js  page.cy.js  project.cy.js  task.cy.js  team.cy.js
frontend/cypress/support/: commands.js  commands.ts  e2e.ts
frontend/src/: App.vue  components.d.ts  globals.d.ts  index.css  main.js  router.js  socket.js  telemetry.ts
frontend/src/components/: AboutDialog.vue  ActionSheet.vue  Activity.vue  AddMemberDialog.vue  AddTeamDialog.vue  AppLayout.vue  AppLink.vue  AppNavbar.vue  AppSearch.vue  AppSelector.vue  AppShell.vue  AppSidebar.vue  AppSidebarLink.vue  Apps.vue  ArchivedTeamsDialog.vue  AssignUser.vue  BottomSheet.vue  Breadcrumbs.vue  ChangeSpaceCategoryDialog.vue  ColorPicker.vue  CommandPalette.vue  Comment.vue  CommentEditor.vue  CommentsArea.vue  CommentsList.vue  CoverImage.vue  DesktopLayout.vue  DiscussionBreadcrumbs.vue  DiscussionList.vue  DiscussionListByData.vue  DiscussionMeta.vue  DiscussionRow.vue  DiscussionView.vue  DraftDiscussions.vue  DragHandleIcon.vue  DropdownMenu.vue  DropdownMoreOptions.vue  EditCategoryDialog.vue  EditSpaceDialog.vue  EmptyStateBox.vue  (+61 more)
frontend/src/data/: apps.ts  discussions.ts  groupedSpaces.ts  newDoc.js  notifications.js  notifications.ts  projects.js  session.js  session.ts  spaces.ts  tags.ts  tasks.ts  teams.js  teams.ts  users.js  users.ts
frontend/src/directives/: focus.js  focus.ts  index.js  index.ts
frontend/src/pages/: ComingSoon.vue  CommentsArea.vue  DailyPlanner.vue  DailyPlannerCalendar.vue  DailyPlannerNotes.vue  DailyPlannerTasks.vue  Discussions.vue  Drafts.vue  EditDocument.vue  Feed.vue  Home.vue  HomeDiscussions.vue  HomeOverview.vue  HomeProjectCard.vue  HomeProjects.vue  HomeTask.vue  HomeTasks.vue  Homescreen.vue  HomescreenProjectCard.vue  Login.vue  MyPages.vue  MyTasks.vue  NewDiscussion.vue  Notifications.vue  Onboarding.vue  OnboardingStepInvites.vue  OnboardingStepProject.vue  OnboardingStepTeam.vue  Page.vue  PageEditor.vue  PageGrid.vue  People.vue  PeopleProfile.vue  PersonProfile.vue  PersonProfileAboutMe.vue  PersonProfileBookmarks.vue  PersonProfilePosts.vue  PersonProfileReplies.vue  PersonalSettings.vue  Project.vue  (+57 more)
frontend/src/resources/: teams.js  users.js
frontend/src/types/: GPDiscussion.ts  GPMember.ts  GPProject.ts  GPReaction.ts  doctypes.ts  global.d.ts
frontend/src/utils/: composables.js  composables.ts  dayjs.js  dayjs.ts  dialogs.js  dialogs.jsx  dialogs.tsx  formatters.js  formatters.ts  index.js  index.ts  (+6 more)
gameplan/: __init__.py  api.py  command_palette.py  digest.py  gemoji.py  hooks.py  install.py  modules.txt  patches.txt  permissions.py  search.py  search2.py  search_sqlite.py  telemetry.py  test_api.py  unsplash.py  utils.py
gameplan/config/: desktop.py  docs.py
gameplan/demo/: __init__.py  demo.py  discussions_comments.py  team_projects.py  user.py
gameplan/extends/: client.py
gameplan/fixtures/: role.json
gameplan/migrate_from_discourse/: __init__.py  emojis.py
gameplan/mixins/: activity.py  archivable.py  manage_members.py  mentions.py  on_delete.py  reactions.py  tags.py
gameplan/patches/: add_weekly_digest_user_field.py  backfill_gp_comment_edited_at.py  rename_doctypes.py  rename_doctypes_with_gp_prefix.py  update_gameplan_roles.py
gameplan/utils/: fts.py  search.py  utils.py
gameplan/www/: g.py  teams.py
scripts/: install-pnpm.sh  manage_workspaces.sh
sites/: common_site_config.json
teams/: api.py  gemoji.py  hooks.py  modules.txt  patches.txt  unsplash.py  utils.py
teams/config/: desktop.py  docs.py
teams/fixtures/: role.json
teams/migrate_from_discourse/: __init__.py
teams/mixins/: manage_members.py
teams/www/: teams.py
(+274 files in other folders)
