[project]
name = "gameplan"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io" },
]
description = "Team discussion and collaboration tool"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = [
    "F403", # can't detect undefined names from * import
    "W191", # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
